tests/dataset/tpc-ds/compiler/c/q81.error
/tmp/q81.c: In function ‘main’:
/tmp/q81.c:211:21: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  211 |     tmp2.data[tmp3] = r.state;
      |                     ^
/tmp/q81.c:221:34: warning: implicit declaration of function ‘catalog_return_list_t_create’ [-Wimplicit-function-declaration]
  221 |     catalog_return_list_t tmp8 = catalog_return_list_t_create(_gp.items.len);
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q81.c:221:34: error: invalid initializer
/tmp/q81.c:244:32: warning: implicit declaration of function ‘avg_list_item_list_t_create’ [-Wimplicit-function-declaration]
  244 |   avg_list_item_list_t tmp13 = avg_list_item_list_t_create(avg_list.len);
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q81.c:244:32: error: invalid initializer
/tmp/q81.c:255:19: warning: implicit declaration of function ‘first’ [-Wimplicit-function-declaration]
  255 |   int avg_state = first(tmp13);
      |                   ^~~~~
/tmp/q81.c:260:60: error: request for member ‘avg_amt’ in something not a structure or union
  260 |     if (!((strcmp(r.state, "CA") == 0) && r.amt > avg_state.avg_amt * 1.2)) {
      |                                                            ^
