tests/dataset/tpc-ds/compiler/c/q81.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _avg_float(list_float v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  char *key;
  list_int items;
} _GroupString;
typedef struct {
  int len;
  int cap;
  _GroupString *data;
} list_group_string;
static list_group_string _group_by_string(list_string src) {
  list_group_string res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    char *key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (strcmp(res.data[j].key, key) == 0) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data =
            (_GroupString *)realloc(res.data, sizeof(_GroupString) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupString *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = i;
  }
  return res;
}
typedef struct {
  int cust;
  const char *state;
  double amt;
} catalog_return_t;
typedef struct {
  int len;
  catalog_return_t *data;
} catalog_return_list_t;
catalog_return_list_t create_catalog_return_list(int len) {
  catalog_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *state;
  double avg_amt;
} avg_list_item_t;
typedef struct {
  int len;
  avg_list_item_t *data;
} avg_list_item_list_t;
avg_list_item_list_t create_avg_list_item_list(int len) {
  avg_list_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(avg_list_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static int test_TPCDS_Q81_sample_result;
static void test_TPCDS_Q81_sample() {
  if (!((test_TPCDS_Q81_sample_result == 81.0))) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  catalog_return_t catalog_returns[] = {
      (catalog_return_t){.cust = 1, .state = "CA", .amt = 40.0},
      (catalog_return_t){.cust = 2, .state = "CA", .amt = 50.0},
      (catalog_return_t){.cust = 3, .state = "CA", .amt = 81.0},
      (catalog_return_t){.cust = 4, .state = "TX", .amt = 30.0},
      (catalog_return_t){.cust = 5, .state = "TX", .amt = 20.0}};
  int catalog_returns_len =
      sizeof(catalog_returns) / sizeof(catalog_returns[0]);
  catalog_return_list_t tmp1 = create_catalog_return_list(catalog_returns_len);
  list_string tmp2 = list_string_create(catalog_returns_len);
  int tmp3 = 0;
  for (int i4 = 0; i4 < catalog_returns_len; i4++) {
    catalog_return_t r = catalog_returns[i4];
    tmp1.data[tmp3] = r;
    tmp2.data[tmp3] = r.state;
    tmp3++;
  }
  tmp1.len = tmp3;
  tmp2.len = tmp3;
  list_group_string tmp5 = _group_by_string(tmp2);
  avg_list_item_list_t tmp6 = create_avg_list_item_list(tmp5.len);
  int tmp7 = 0;
  for (int gi = 0; gi < tmp5.len; gi++) {
    _GroupString _gp = tmp5.data[gi];
    catalog_return_list_t tmp8 = catalog_return_list_t_create(_gp.items.len);
    for (int i9 = 0; i9 < _gp.items.len; i9++) {
      tmp8.data[i9] = tmp1.data[_gp.items.data[i9]];
    }
    tmp8.len = _gp.items.len;
    struct {
      char *key;
      catalog_return_list_t items;
    } g = {_gp.key, tmp8};
    list_float tmp10 = list_float_create(g.items.len);
    int tmp11 = 0;
    for (int i12 = 0; i12 < g.items.len; i12++) {
      catalog_return_t x = g.items.data[i12];
      tmp10.data[tmp11] = x.amt;
      tmp11++;
    }
    tmp10.len = tmp11;
    tmp6.data[tmp7] =
        (avg_list_item_t){.state = g.key, .avg_amt = _avg_float(tmp10)};
    tmp7++;
  }
  tmp6.len = tmp7;
  avg_list_item_list_t avg_list = tmp6;
  avg_list_item_list_t tmp13 = avg_list_item_list_t_create(avg_list.len);
  int tmp14 = 0;
  for (int tmp15 = 0; tmp15 < avg_list.len; tmp15++) {
    avg_list_item_t a = avg_list.data[tmp15];
    if (!((strcmp(a.state, "CA") == 0))) {
      continue;
    }
    tmp13.data[tmp14] = a;
    tmp14++;
  }
  tmp13.len = tmp14;
  int avg_state = first(tmp13);
  list_float tmp16 = list_float_create(catalog_returns_len);
  int tmp17 = 0;
  for (int tmp18 = 0; tmp18 < catalog_returns_len; tmp18++) {
    catalog_return_t r = catalog_returns[tmp18];
    if (!((strcmp(r.state, "CA") == 0) && r.amt > avg_state.avg_amt * 1.2)) {
      continue;
    }
    tmp16.data[tmp17] = r.amt;
    tmp17++;
  }
  tmp16.len = tmp17;
  list_float result_list = tmp16;
  double result = first(result_list);
  _json_float(result);
  test_TPCDS_Q81_sample_result = result;
  test_TPCDS_Q81_sample();
  free(tmp13.data);
  free(result_list.data);
  return 0;
}
